[package]
authors = [
        "Przemyslaw M. Maciolek <pmm@collective-sense.com>",
        "Jacek Całusiński <forger@forger.pl>",
        "Tomasz Barański <tomasz.baranski@collective-sense.com>"
]
name = "hyena"
version = "0.1.0"

[workspace]

[dependencies]
clap = "2.33.0"
flexi_logger = "0.14.8"
log = "0.4.8"
dotenv = "0.15.0"
futures = "^0.1.29"
tokio-core = "0.1.17"
bytes = "0.5.4"
bincode = "1.2.1"
nanomsg-multi-server = { git = "https://github.com/forgerpl/nanomsg-multi.git" }
hyena-benchmark = { path = "hyena-benchmark" }
nanomsg = "0.7.2"

[dependencies.hyena-engine]
optional = false
path = "hyena-engine"

[dependencies.hyena-common]
optional = false
path = "hyena-common"

[dependencies.hyena-test]
optional = false
path = "hyena-test"

[dependencies.hyena-api]
optional = false
path = "hyena-api"

[dependencies.hyena-bloom-filter]
optional = false
path = "hyena-bloom-filter"

[dependencies.colored_logger]
git = "https://github.com/forgerpl/colored_logger.git"
optional = false

[dependencies.nanomsg-tokio]
git = "https://github.com/forgerpl/nanomsg-tokio.git"
optional = false

[features]
default = []
nightly = ["hyena-common/nightly", "hyena-engine/nightly", "hyena-bloom-filter/nightly"]
debug = ["hyena-engine/debug"]
validate_append = ["hyena-engine/validate_append"]
